<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cru.websitegeneratorhelper</groupId>
    <artifactId>website-generator-helper</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <jsoup.version>1.17.2</jsoup.version>
        <project.encoding>UTF-8</project.encoding>
        <javafx.version>22.0.2</javafx.version>
    </properties>

    <dependencies>
        <!-- JavaFX modules -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- End JavaFX modules -->
        <!-- JSoup module -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
    </dependencies>

    <build>

        <resources>
            <resource>
                <directory>${project.basedir}/data</directory>
                <includes>
                    <include>**/*.png</include>
                </includes>
                <targetPath>data</targetPath>
            </resource>
        </resources>

        <plugins>
            <!-- Compiler Plugin Configuration -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.encoding}</encoding> <!-- Set file encoding for source files -->
                </configuration>
            </plugin>
            
            <!-- Resources Plugin Configuration -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>${project.encoding}</encoding> <!-- Set file encoding for resources -->
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version> <!-- Update to the latest version if available -->
                <executions>
                    <execution>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.cru.websitegeneratorhelper/com.cru.websitegeneratorhelper.Main</mainClass>
                </configuration>
            </plugin>

            <!-- Maven Surefire Plugin Configuration -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        --module-path ${javafx.module.path} --add-modules javafx.controls,javafx.fxml
                    </argLine>
                    <additionalClasspathElements>
                        <additionalClasspathElement>${project.basedir}/lib/*</additionalClasspathElement>
                    </additionalClasspathElements>
                    <encoding>${project.encoding}</encoding>
                </configuration>
            </plugin>

            <!-- Exec Maven Plugin Configuration -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.cru.websitegeneratorhelper.Main</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
